--- a/api/.env
+++ b/api/.env
@@ -27,7 +27,7 @@ ANY_API_KEY="n95o6bm1qv8rvtsg7dpqugg8u7fjoo3ggekcrskdsbqigtm1hhtkmg"
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://user:password@db:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://user:password@db-1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
