--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 
 services:
   php:
-    container_name: php-cli
+    container_name: php-cli-1
     build:
       context: ./api
     volumes:
@@ -13,7 +13,7 @@ services:
       - app_network
 
   nginx:
-    container_name: nginx
+    container_name: nginx-1
     build:
       context: ./nginx
     ports:
@@ -25,7 +25,7 @@ services:
 
   postgres:
     image: postgres:latest
-    container_name: db
+    container_name: db-1
     restart: always
     environment:
       POSTGRES_USER: user
@@ -38,7 +38,7 @@ services:
     networks:
       - app_network
   frontend:
-    container_name: frontend
+    container_name: frontend-1
     build:
       context: ./frontend
     ports:
